Add web platform back to fix EAS build bundling issue

--- a/app.json
+++ b/app.json
@@ -9,7 +9,8 @@
     "privacy": "public",
     "platforms": [
       "ios",
-      "android"
+      "android",
+      "web"
     ],
     "splash": {
       "resizeMode": "contain",
