--- a/app.json
+++ b/app.json
@@ -36,6 +36,12 @@
         "projectId": "a8f8bd72-cf0d-4a54-8454-e5244f56dc70"
       }
     },
-    "owner": "mbagatur"
+    "owner": "mbagatur",
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/a8f8bd72-cf0d-4a54-8454-e5244f56dc70"
+    }
   }
 }
