--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-dom": "18.2.0",
     "react-native": "0.72.10",
     "react-native-web": "~0.19.6",
-    "expo-dev-client": "~2.4.13"
+    "expo-dev-client": "~2.4.13",
+    "expo-updates": "~0.18.19"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
