Optimize EAS builds by excluding remote-sample folder
- Added ignore patterns to eas.json to exclude remote-sample/ from all builds
- Created .easignore to exclude documentation, development files, and remote content
- remote-sample folder (41.47 MB, 26 files) was inflating build size unnecessarily
- Should reduce build size from 103MB to ~60MB by removing remote assets
- remote-sample/ remains in repo for GitHub Pages but excluded from app builds

--- a/eas.json
+++ b/eas.json
@@ -11,7 +11,8 @@
       },
       "ios": {
         "resourceClass": "m-medium"
-      }
+      },
+      "ignore": "remote-sample/**/*"
     },
     "preview": {
       "distribution": "internal",
@@ -20,7 +21,8 @@
       },
       "ios": {
         "resourceClass": "m-medium"
-      }
+      },
+      "ignore": "remote-sample/**/*"
     },
     "production": {
       "android": {
@@ -28,7 +30,8 @@
       },
       "ios": {
         "resourceClass": "m-medium"
-      }
+      },
+      "ignore": "remote-sample/**/*"
     }
   },
   "submit": {
