--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,13 @@
 node_modules
 .expo/
+dist/
+
+# Local development files
+.vscode/
+*.log
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Note: remote-sample/ stays in repo for GitHub Pages hosting
